code/CLI/store/archive/plateforme-deployment-01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: plateforme-deployment-01-deployment
spec:
    replicas: 2
    selector:
        matchLabels:
            component: plateforme-deployment-01
    template:
        metadata:
            labels:
                component: plateforme-deployment-01
        spec:
            volumes:
                - name: media-volume
                  persistentVolumeClaim:
                    claimName: media_volume-persistent-volume-claim
            containers:
                - name: plateforme
                  args: [""]
                  command: ["/bin/sh"]
                  image: said10/plateforme
                  ports:
                    - containerPort: 8000
                  volumeMounts:
                      - name: media-volume
                        mountPath: /etc/app
                        subPath: app
